<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="bindingListener"
            type="com.solar.dev.tiktok.app.ui.dialog.OrderLikeDialog" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_216sdp"
        android:layout_gravity="center"
        app:cardCornerRadius="@dimen/_12sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivCover"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/gif_order_like" />

            <TextView
                android:id="@+id/tvMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/order_likes"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/ivCover" />

            <TextView
                android:id="@+id/tvContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintTop_toBottomOf="@+id/tvMessage"
                tools:text="@string/content_order_likes" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/colorBlack_10"
                app:layout_constraintBottom_toTopOf="@+id/ll_footer" />

            <LinearLayout
                android:id="@+id/ll_footer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_44sdp"
                app:layout_constraintBottom_toBottomOf="parent">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btCancel"
                    deBounceClick="@{()->bindingListener.onClickCancel(btCancel)}"
                    android:stateListAnimator="@xml/normal_button_trans"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button_left_dialog_not_enough"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/colorBlack_40"
                    android:textSize="@dimen/_16ssp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btConfirm"
                    deBounceClick="@{()->bindingListener.onClickConfirm(btConfirm)}"
                    android:stateListAnimator="@xml/normal_button_trans"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button_right_dialog_not_enough"
                    android:text="@string/confirm"
                    android:textAllCaps="false"
                    android:textColor="@color/colorOrange"
                    android:textSize="@dimen/_16ssp"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>