<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="bindingListener"
            type="com.solar.dev.tiktok.app.ui.dialog.InvalidUrlDialog" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_216sdp"
        android:layout_gravity="center"
        app:cardCornerRadius="@dimen/_12sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivCover"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/gif_404" />

            <TextView
                android:id="@+id/tvMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/msg_invalid_url"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/ivCover" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/content_invalid_url"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintTop_toBottomOf="@+id/tvMessage" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/colorBlack_10"
                app:layout_constraintBottom_toTopOf="@+id/btOk" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btOk"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_44sdp"
                deBounceClick="@{()->bindingListener.onClickOK(btOk)}"
                android:background="@drawable/custom_button_dialog_invalid"
                android:stateListAnimator="@xml/normal_button_trans"
                android:text="@string/ok"
                android:textColor="@color/colorBlack_100"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintBottom_toBottomOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>